// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Operation Object examples > deprecated operation > does not include @deprecated for non-deprecated operations 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Current endpoint
     */
    getCurrent: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/current\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Operation Object examples > deprecated operation > includes @deprecated JSDoc tag for deprecated operations 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Legacy endpoint
     *
     * @deprecated
     */
    getLegacy: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/legacy\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Operation Object examples > operationId usage > falls back to path-based when operationId-with-fallback and no operationId 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getUsers: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/users\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Operation Object examples > operationId usage > prefers operationId with operationId-with-fallback strategy when available 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    listUsers: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/users\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Operation Object examples > operationId usage > uses operationId as method name with operationId strategy 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    listUsers: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/users\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Operation Object examples > operationId usage > uses path-based name by default and ignores operationId 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    getUsers: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/users\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Operation Object examples > summary and description > does not duplicate summary when description equals summary 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Health check
     */
    getPing: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/ping\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Operation Object examples > summary and description > includes both summary and description in JSDoc when both present 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * List all users
     *
     * Returns a paginated list of all registered users in the system.
     */
    getUsers: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/users\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Operation Object examples > summary and description > includes only description in JSDoc when summary is absent 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * Returns all registered users.
     */
    getUsers: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/users\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`Operation Object examples > summary and description > includes only summary in JSDoc when description is absent 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * List all users
     */
    getUsers: decorateWithErrors<() => Promise<void>, never>(
      async (): Promise<void> => {
        try {
          const result = await requester<void>("GET", \`/users\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;
